--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,11 @@ header {
 
 .header-left { display: flex; align-items: center; gap: 12px; }
 
+.header-logo{
+    width: 100%;
+    height: auto;
+}
+
 header h1 { font-size: 1.1rem; margin: 0; font-weight: 500; letter-spacing: 0.5px; }
 
 
